Fix clipboard copying on mobile screens. Add clear button to clear the filters.

--- a/src/app/search-controls/search-controls.component.css
+++ b/src/app/search-controls/search-controls.component.css
@@ -34,9 +34,9 @@
    border: 1px gray solid;
    border-radius: 0.2rem;
    margin-top: 0.2rem;
-   display: flex;
-   flex-direction: column;
-   width: 45%;
+   /* display: flex;
+   flex-direction: column; */
+   width: 100%;
 }
 
 .opts-half-row {
